--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "express": "^5.1.0",
     "express-rate-limiter": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.3"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -17,7 +19,8 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
